---------------------------------------------------------------
         Go4 Release Package v5.0.1 (build 50001)
                      20-July-2015
---------------------------------------------------------------
    The GSI Online Offline Object Oriented (Go4) Project
    Experiment Data Processing at EE department, GSI
---------------------------------------------------------------
Authors: Joern Adamczewski-Musch      (1999-)
         Mohammad Al-Turany           (2000-2004)
         Denis Bertini                (2001-2004)
         Hans Georg Essel             (1999-2010)
         Marc Hemberger               (1999-2000)
         Sergey Linev                 (2002-)
---------------------------------------------------------------
Copyright (C) 2000- Gesellschaft f. Schwerionenforschung, GSI
                    Planckstr. 1, 64291 Darmstadt, Germany
Contact:            http://Go4.gsi.de
---------------------------------------------------------------
This software can be used under the license agreements as stated
in Go4License.txt file which is part of the distribution.
---------------------------------------------------------------

Changes in Go4 v5.0.x
1. One can register Start/Stop/Clear commands in any place of THttpServer hierarchy.
   Such commands recognized by the GUI and used when pressing Start/Stop analysis buttons
   or Clear analysis objects button 
2. Allow to use graphics in analysis. With "-gr" or "-graphics" option one enable ROOT graphics.
   User can create and update canvas or any other TG... object. 


Changes in Go4 v5.0.0
1. GUI Settings/Preferences: Added configurable window resize/move mode ("rubberband" outline or full repaint). 
   Reduces window flickering with current Qt5.x versions due to non compressed X-events
2. Workarounds in qtroot interface for Qt5: to avoid known bug with non compressed X mouse events
   (https://bugreports.qt.io/browse/QTBUG-40889), introduced 100ms time limit for processing mouse move events 